src/App.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    "Helvetica Neue", Arial, sans-serif;
  color: #333;
  background-color: #f5f5f7;
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

.App {
  display: flex;
  height: 100vh;
  overflow: hidden;
  position: relative;
}

.sidebar > a {
  text-decoration: none;
  color: #0071e3;
  font-family: Arial, Helvetica, sans-serif;
}

/* Sidebar Styling */
.sidebar {
  width: 280px;
  background-color: #f5f5f7;
  padding: 20px;
  border-right: 1px solid #d2d2d7;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
  overflow-y: auto;
  transition: transform 0.3s ease;
  transform: translateX(0);
}

.sidebar.hidden {
  transform: translateX(-100%);
}

.sidebar h2 {
  font-size: 24px;
  font-weight: 600;
  margin-bottom: 20px;
  color: #1d1d1f;
}

/* Accordion Button Styling */
.accordion-button {
  background: none;
  border: none;
  font-size: 1rem;
  font-weight: 500;
  color: #0071e3;
  text-align: left;
  cursor: pointer;
  width: 100%;
  border-radius: 8px;
  transition: background-color 0.3s ease;
}

.accordion-button:hover {
  background-color: rgba(0, 113, 227, 0.1);
}

.accordion-content {
  padding-left: 15px;
}

/* Project Links Styling */
.project-link {
  display: block;
  text-decoration: none;
  color: #1d1d1f;
  font-size: 14px;
  transition: color 0.3s ease;
}

.project-link:hover {
  color: #0071e3;
}

/* Main content styling */
.main-content {
  background-color: #fff;
  flex: 1;
  overflow-y: auto;
  box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.1);
  margin-left: 280px;
  transition: margin-left 0.3s ease;
}

/* Sidebar hidden*/
.main-content.hidden {
  margin-left: 0;
}

.main-content h1 {
  font-size: 28px;
  font-weight: 600;
  color: #1d1d1f;
}

.main-content p {
  font-size: 16px;
  color: #6e6e73;
  line-height: 1.6;
}

/* Sidebar toggle button */
.hide-sidebar-label {
  position: fixed;
  bottom: 20px;
  left: 20px;
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
}

.hide-sidebar-font {
  color: #333;
  font-weight: 600;
  text-transform: uppercase;
}

.show-sidebar {
  position: fixed;
  left: 0;
  top: 86%;
  transform: translateY(-50%);
  background-color: #0071e3;
  color: #ffffff;
  padding: 0px 1px;
  border-radius: 0 8px 8px 0;
  writing-mode: vertical-rl;
  font-size: 12px;
  font-weight: bold;
  cursor: pointer;
  transition: all 0.3s ease-in-out;
}

.show-sidebar:hover {
  background-color: #19518a;
}

